--- a/invoice/index.html
+++ b/invoice/index.html
@@ -51,7 +51,7 @@
                         <label for="currency"><b>Currency</b></label><br>
                         <select name="currency" id="currency" onchange="setCurrency()">
                             <option value="INR">Indian National Rupee - INR</option>
-                            <option value="GPB">British Pound - GBP</option>
+                            <option value="GBP">British Pound - GBP</option>
                             <option value="USD">U.S. Dollar - USD</option>
                             <option value="AED">UAE Dirham - AED</option>
                             <option value="EUR">Euro - EUR</option>
@@ -117,7 +117,7 @@ City & Zip, Your Country</textarea><br>
                         <div>
                             <textarea id="iName0" name="iName0" rows="4" cols="50" class="nameTA"></textarea>
                         </div>
-                        <div>
+                        <div class="formButtons">
                             <button type="button" id="iCopyButton0" onClick="copyForm(this.id)"><i
                                     class="fa fa-copy"></i></button>
                             <button type="button" id="iDeleteButton0" onClick="deleteForm(this.id)"><i
