--- a/invoice/index.html
+++ b/invoice/index.html
@@ -142,7 +142,7 @@ City & Zip, Your Country</textarea><br>
 
             <div class="row">
                 <div class="column1">
-                    <button type="button" class="newLine" onclick="newLine('#item0','0')">New Line</button>
+                    <button type="button" class="newLine" onclick="newLine()">New Line</button>
                 </div>
                 <div class="column2">
                     <div class="last">
