--- a/js_practice/functions/index_function.html
+++ b/js_practice/functions/index_function.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Constructor Functions</title>
+    <title>Functions</title>
     <link rel="stylesheet" href="style_function.css">
 </head>
 
@@ -14,6 +14,8 @@
     <ul>
         <li>Scoping</li>
         <li>Currying</li>
+        <li>Immediately Invoked Function Expressions (IIFE)</li>
+        <li>Variadic Functions</li>
     </ul>
 </body>
 <script src="script_function.js"></script>
