application of object

--- a/js_practice/objects/index_objects.html
+++ b/js_practice/objects/index_objects.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Objects</title>
+    <link rel="stylesheet" href="style_objects.css">
 </head>
+
 <body>
-    
+    <h1>Objects in JavaScript</h1>
+    <ul>
+        <li>
+            <p>An object in JavaScript is an entity having state and behavior (properties and method). There are 3 ways
+                to create
+                objects:</p>
+            <ul>
+                <li> By object literals</li>
+                <li> By creating instance of Object directly (using new keyword)</li>
+                <li> By using an object constructor (using new keyword)</li>
+            </ul>
+        </li>
+        <li>Getting values from objects
+            <ul>
+                <li>Dot operator</li>
+                <li>Square brackets</li>
+            </ul>
+        </li>
+        <li>Objects are mutable</li>
+        <li>Getting all keys of an object</li>
+        <li>Getting all values of an object</li>
+        <li>Getting all key/value pairs of an object</li>
+        <li>Getting the description of a specific property in an object</li>
+        <li>Defining property in an object</li>
+    </ul>
+    <a href="application_object.html" target="_blank">Application of objects in JavaScript</a>
 </body>
+<script src="script_objects.js"></script>
+
 </html>
