--- a/js_practice/objects/application_object.html
+++ b/js_practice/objects/application_object.html
@@ -18,9 +18,7 @@
     <div style="padding: 100px; padding-top: 30px;">
         <div class="app">
             <div class="container mt-4">
-                <h1 class="display-4 text-center">
-                    <i class="fas fa-school" style="color: purple;"></i> Students
-                </h1>
+                <h1 class="display-4 text-center">Students</h1>
                 <form id="student-form">
                     <div class="form-group">
                         <label for="name">Name</label>
